sandbox/output
MedicineClashTest.java:44: error: method of in class MedicineClash cannot be applied to given types;
            MedicineClash.of(customers, "Codeine", "Prozac", 90, LocalDate.now()));
                         ^
  required: List<Customer>,long,LocalDate
  found: List<Customer>,String,String,int,LocalDate
  reason: actual and formal argument lists differ in length
MedicineClashTest.java:66: error: method of in class MedicineClash cannot be applied to given types;
            MedicineClash.of(customers, "Codeine", "Prozac", 90, LocalDate.now()));
                         ^
  required: List<Customer>,long,LocalDate
  found: List<Customer>,String,String,int,LocalDate
  reason: actual and formal argument lists differ in length
2 errors
